--- a/weblib/build.gradle
+++ b/weblib/build.gradle
@@ -42,12 +42,20 @@ dependencies {
 
 
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-    implementation 'com.android.support:animated-vector-drawable:28.0.0-rc01'
-    implementation 'com.android.support:cardview-v7:28.0.0-rc01'
-    implementation 'com.android.support:design:28.0.0-rc01'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:animated-vector-drawable:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+
+
+//    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
+//    implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
+//    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
+//    implementation 'com.android.support:animated-vector-drawable:28.0.0-rc01'
+//    implementation 'com.android.support:cardview-v7:28.0.0-rc01'
+//    implementation 'com.android.support:design:28.0.0-rc01'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -57,7 +65,7 @@ dependencies {
 //    compile(name: 'xwalk_core_library-23.53.589.4-arm', ext: 'aar')
 //    api project(path: ':baseLibary')
     api 'com.android.support:multidex:1.0.3'
-    api 'cn.com.swain169:baselib:3.0.17'
-    api 'cn.com.swain169:Tlog:3.0.18'
+    api 'cn.com.swain169:baselib:3.1.10'
+    api 'cn.com.swain169:Tlog:3.1.10'
 
 }
