--- a/build.gradle
+++ b/build.gradle
@@ -21,14 +21,14 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        mavenLocal()
         maven {
             url 'https://dl.bintray.com/robin1015/maven/'
-
         }
         maven {
             url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2'
         }
-
+        maven { url "https://jitpack.io" }
         maven { url 'https://dl.bintray.com/swain169/maven/' }
     }
 }
