--- a/sharedCharger/src/main/AndroidManifest.xml
+++ b/sharedCharger/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/shared_charger_app_name"
         android:largeHeap="true"
         android:roundIcon="@mipmap/shared_charger_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
