--- a/sharedlib/build.gradle
+++ b/sharedlib/build.gradle
@@ -30,7 +30,9 @@ allprojects {
         flatDir {
             dirs 'libs'
         }
-        jcenter()
+        maven {
+            url 'https://dl.bintray.com/robin1015/maven/'
+        }
     }
 }
 
@@ -65,19 +67,22 @@ dependencies {
     //android 工具库
     implementation 'com.blankj:utilcode:1.22.1'
 
-    // 下载
+    // 上传下载
     implementation 'org.xutils:xutils:3.5.0'
     implementation 'cn.com.startai:fastdfssdk:1.0.2'
 
     //startai mqtt  sdk包
-    implementation 'cn.com.startai:mqsdk:3.1.32'
+    implementation 'cn.com.startai:mqsdk:3.1.38'
+    //startai mqtt charger sdk 包
+    implementation 'cn.com.startai:charger:1.1.111'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
-    //startai mqtt charger sdk 包
-    implementation 'cn.com.startai:charger:1.1.110'
 
 
     api project(':weblib')
     implementation 'org.jetbrains:annotations-java5:15.0'
+
+    // 调试
+    api 'com.facebook.stetho:stetho:1.5.0'
 
 }
