--- a/sharedlib/src/main/AndroidManifest.xml
+++ b/sharedlib/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:hardwareAccelerated="true"
         android:largeHeap="true"
         android:screenOrientation="portrait"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true">
         <service android:name=".app.view.service.MutualService" />
     </application>
