--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':sharedCharger', ':sharedlib', ':weblib', ':synermax', ':application'
+include ':sharedCharger', ':sharedlib', ':weblib', ':synermax', ':application', ':pika'
 
 //include ':baseLibary'
 //project(":baseLibary").projectDir = new File('../Common/baseLibrary')
