--- a/sharedlib/build.gradle
+++ b/sharedlib/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 28
 
-    aaptOptions.cruncherEnabled = false
-    aaptOptions.useNewCruncher = false
+//    aaptOptions.cruncherEnabled = false
+//    aaptOptions.useNewCruncher = false
 
     defaultConfig {
         minSdkVersion 19
@@ -70,20 +70,20 @@ dependencies {
     }
 
     //zxing二维码识别 基础包
-    implementation 'com.google.zxing:core:3.3.0'
+    implementation 'com.google.zxing:core:3.3.3'
     //二维码扫描 ui 库
-    implementation 'com.mylhyl:zxingscanner:2.1.0'
+    implementation 'com.mylhyl:zxingscanner:2.1.6'
     //startai 二维码扫描 sdk
-    implementation 'cn.com.startai:scansdk:1.1.5'
+    implementation 'cn.com.startai:scansdk:1.2.11'
     //android 工具库
     implementation 'com.blankj:utilcode:1.22.1'
 
     // 上传下载
-    implementation 'org.xutils:xutils:3.5.0'
+    implementation 'org.xutils:xutils:3.5.1'
     implementation 'cn.com.startai:fastdfssdk:1.0.2'
 
     //startai mqtt  sdk包
-    implementation 'cn.com.startai:mqsdk:3.1.73'
+    implementation 'cn.com.startai:mqsdk:3.1.76'
     //startai mqtt charger sdk 包
     implementation 'cn.com.startai:charger:1.1.116'
     implementation 'com.google.code.gson:gson:2.8.5'
