--- a/application/build.gradle
+++ b/application/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 28
 
 
-    aaptOptions.cruncherEnabled = false
-    aaptOptions.useNewCruncher = false
+//    aaptOptions.cruncherEnabled = false
+//    aaptOptions.useNewCruncher = false
 
     defaultConfig {
         applicationId "cn.com.startai.shared.app"
