--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -18,6 +18,15 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
             <intent-filter>
+
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".TestActivity" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <action android:name="android.intent.action.VIEW" />
@@ -25,6 +34,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+
         </activity>
 
 
